# instantfolio-sol

./: Cargo.toml  README.md
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  validation.rs
tests/: name_registry.rs
