[package]
name = "instant-folio"
version = "0.1.0"
edition = "2021"
description = "InstantFolio Name Registry on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.4"
thiserror = "2.0.12"
solana-sdk = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "1.17.0"